<resources>
    <string name="app_name">Recipedia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="jokes">Jokes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="welcome_back">Welcome back !!</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="create_new_account">Create new account</string>
    <string name="please_fill_in_the_form_to_creat_account">Please fill in the form to creat account</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="username">Username</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_your_password_write_your_email_and_reset_password">Forget your password ? Write your email and reset password</string>
    <string name="image_button">image_button</string>
    <string name="send">Send</string>
    <string name="error_text">Please enter, its error</string>
    <string name="error_create">Creating Account Failed</string>
    <string name="text_user">Users</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="_123">123</string>
    <string name="vegan">Vegan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main course</string>
    <string name="side_dish">Side dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="textview">TextView</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="image_view">Image View</string>
</resources>