<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_back"
        android:textColor="@color/green_primary"
        android:textSize="@dimen/_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_to_ur_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_to_your_account"
        android:textColor="@color/balck_grey"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_login_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome" />

    <TextView
        android:id="@+id/tv_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_322dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email"
        android:textColor="@color/balck_grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_login_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_to_ur_acc" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_15dp"
        android:textColor="@color/balck_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_email" />

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password"
        android:textColor="@color/balck_grey"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_email"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_15dp"
        android:textColor="@color/balck_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password" />

    <TextView
        android:id="@+id/tv_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginBottom="@dimen/_140dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password"
        app:layout_constraintVertical_bias="0.984" />

    <TextView
        android:id="@+id/tv_create_donthaveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/balck_grey"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_login_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_new_account"
        android:textColor="@color/green_primary"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_create_donthaveacc"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>