<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ResetActivity">

    <TextView
        android:id="@+id/tv_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reset_password"
        android:textColor="@color/green_primary"
        android:textSize="@dimen/_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_back_reset" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="@dimen/_317dp"
        android:layout_height="@dimen/_50dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/forget_your_password_write_your_email_and_reset_password"
        android:textColor="@color/balck_grey"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_reset"
        app:layout_constraintStart_toStartOf="@+id/tv_reset"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset" />

    <TextView
        android:id="@+id/tv_reset_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginTop="@dimen/_124dp"
        android:layout_marginEnd="@dimen/_322dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_reset_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

    <EditText
        android:id="@+id/et_reset_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:autofillHints="Email"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_15dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_email" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginBottom="@dimen/_140dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_reset_email"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email"
        app:layout_constraintTop_toBottomOf="@+id/et_reset_email"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ib_back_reset"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/background_button_green"
        android:contentDescription="@string/image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>